--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,61 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-04 08:03:40 -0400 
+%% Created for Pete Su at 2023-08-04 08:19:08 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Burda2016,
+	author = {Philipp Burda and Ruth Gregory and Ian G. Moss},
+	date-added = {2023-08-04 08:19:04 -0400},
+	date-modified = {2023-08-04 08:19:07 -0400},
+	doi = {10.1007/jhep06(2016)025},
+	journal = {J. High Energ. Phys.},
+	note = {\href{https://arxiv.org/abs/1601.02152}{arxiv:1601.02152}},
+	number = {6},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {The fate of the Higgs vacuum},
+	url = {https://doi.org/10.1007%2Fjhep06%282016%29025},
+	volume = {2016},
+	year = 2016,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep06%282016%29025},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep06(2016)025}}
+
+@article{Brout1991,
+	author = {R. Brout and R. Parentani and Ph. Spindel},
+	date-added = {2023-08-04 08:18:18 -0400},
+	date-modified = {2023-08-04 08:18:19 -0400},
+	doi = {10.1016/0550-3213(91)90508-u},
+	journal = {Nuclear Physics B},
+	number = {1},
+	pages = {209--236},
+	publisher = {Elsevier {BV}},
+	title = {Thermal properties of pairs produced by an electric field: A tunneling approach},
+	url = {https://doi.org/10.1016%2F0550-3213%2891%2990508-u},
+	volume = {353},
+	year = 1991,
+	bdsk-url-1 = {https://doi.org/10.1016%2F0550-3213%2891%2990508-u},
+	bdsk-url-2 = {https://doi.org/10.1016/0550-3213(91)90508-u}}
+
+@article{Brout1995,
+	author = {R. Brout and S. Massar and R. Parentani and Ph. Spindel},
+	date-added = {2023-08-04 08:17:00 -0400},
+	date-modified = {2023-08-04 08:17:09 -0400},
+	doi = {10.1103/physrevd.52.4559},
+	journal = {Phys. Rev. D},
+	note = {\href{https://arxiv.org/abs/hep-th/9506121}{arxiv:hep-th/9506121}},
+	number = {8},
+	pages = {4559--4568},
+	publisher = {American Physical Society ({APS})},
+	title = {Hawking radiation without trans-Planckian frequencies},
+	url = {https://doi.org/10.1103%2Fphysrevd.52.4559},
+	volume = {52},
+	year = 1995,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.52.4559},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.52.4559}}
 
 @article{Bousso2020,
 	author = {Raphael Bousso and Marija Toma{\v{s}}evi{\'{c}}},
@@ -6268,11 +6317,11 @@
 	title = {{Comments on quantum gravity and entanglement}},
 	year = {2009}}
 
-@article{Braunstein:2013my,
+@article{Braunstein2013,
 	archiveprefix = {arXiv},
 	author = {Braunstein, Samuel L. and Pirandola, Stefano and {\.Z}yczkowski, Karol},
 	date-added = {2019-03-15 12:54:52 -0400},
-	date-modified = {2019-03-15 12:54:52 -0400},
+	date-modified = {2023-08-04 08:15:38 -0400},
 	doi = {10.1103/PhysRevLett.110.101301},
 	eprint = {0907.1190},
 	journal = {Phys. Rev. Lett.},
@@ -6575,11 +6624,11 @@
 	year = {2008},
 	bdsk-url-1 = {https://doi.org/10.1016/j.shpsb.2008.04.005}}
 
-@article{Brout:1995rd,
+@article{Brout:1995a,
 	archiveprefix = {arXiv},
 	author = {Brout, R. and Massar, S. and Parentani, R. and Spindel, Ph.},
 	date-added = {2019-03-10 08:13:19 -0400},
-	date-modified = {2019-03-10 08:13:35 -0400},
+	date-modified = {2023-08-04 08:17:13 -0400},
 	doi = {10.1016/0370-1573(95)00008-5},
 	eprint = {0710.4345},
 	journal = {Phys. Rept.},
