--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-04 09:05:54 -0400 
+%% Created for Pete Su at 2023-08-04 09:08:33 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Casini2022,
+	author = {Casini, Horacio and Huerta, Marina},
+	date-added = {2023-08-04 09:08:15 -0400},
+	date-modified = {2023-08-04 09:08:33 -0400},
+	journal = {arXiv},
+	note = {\href{https://arxiv.org/abs/2201.13310}{arxiv:2201.13310}},
+	title = {Lectures on entanglement in quantum field theory},
+	year = {2022}}
 
 @article{Casini2009,
 	author = {H Casini and M Huerta},
