--- a/1712.02803/BEG5.tex
+++ b/1712.02803/BEG5.tex
@@ -1,12 +1,12 @@
 \documentclass[% 
-preprint,
+12pt,preprint,
 nofootinbib,
 amsmath,amssymb,
 aps,
 prd,
 showpacs,
 superscriptaddress
-]{revtex4-1}
+]{revtex4-2}
 \usepackage{setspace}
 \usepackage[caption=false]{subfig}
 \usepackage{graphicx}% Include figure files
@@ -19,17 +19,48 @@ superscriptaddress
 %\usepackage{braket}
 \usepackage{mathrsfs}
 \usepackage{enumitem}
-\usepackage[unicode=true,bookmarks=true,
-bookmarksnumbered=false,bookmarksopen=false,
-breaklinks=false,
-pdfborder={0 0 1},
-backref=false,colorlinks=true]{hyperref}
 
-% Need to fill this in %%%%%%%%%%%%%%%%%%%%%%%%%%%
-\hypersetup{pdftitle={title}, pdfauthor={ChunJun Cao, Sean M. Carroll}, citecolor=blue,linkcolor=blue,urlcolor=blue,citecolor=blue}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-\usepackage{color}
-\definecolor{purple}{rgb}{0.5,0,0.5}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \newcommand{\mrm}[1]{\mathrm{#1}}
 \newcommand{\Hil}{\mathcal{H}}
@@ -53,8 +84,8 @@ backref=false,colorlinks=true]{hyperref}
 \newcommand{\Secs}[2]{Secs.~\ref{#1} and \ref{#2}}
 \newcommand{\Fig}[1]{Fig.~\ref{#1}}
 \newcommand{\App}[1]{App.~\ref{#1}}
-\newcommand{\Ref}[1]{Ref.~ \cite{#1}}
-\newcommand{\Refs}[1]{Refs.~ \cite{#1}}
+%\newcommand{\Ref}[1]{Ref.~ \cite{#1}}
+%\newcommand{\Refs}[1]{Refs.~ \cite{#1}}
 \DeclareMathOperator{\co}{:}
 \interfootnotelinepenalty=10000
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
