--- a/1712.02803/BEG5.tex
+++ b/1712.02803/BEG5.tex
@@ -114,8 +114,10 @@ We also discuss how entanglement equilibrium is related to a generalization of t
 \end{abstract}
 
 \maketitle
+\newpage
+
 \tableofcontents
-\vfill\eject
+\newpage
 
 \section{Introduction}
 
