--- a/1005.3035/essay10.tex
+++ b/1005.3035/essay10.tex
@@ -10,6 +10,23 @@
 \usepackage{graphicx}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
 ,breaklinks=true
 ,urlcolor=blue
@@ -24,17 +41,19 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
 
-% these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
-\input{../helpers/fix-underbrace.tex}
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
-\usepackage[small]{titlesec}
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 %\usepackage{showlabels}
 
@@ -138,20 +157,14 @@ March 31, 2010
 \end{center}
 \end{titlepage}
 
-\vskip 1cm
-\vskip 0.1 in
-\noindent
-{\bf Introduction}
-\vskip 0.1 in
-\noindent
+\section{Introduction}
+
 The gravity / gauge theory correspondence \cite{bfss, malda,agmoo} in string theory represents exciting progress towards finding a general non-perturbative description of quantum gravity. It posits that certain quantum gravitational theories with fixed spacetime asymptotic behavior are exactly equivalent to ordinary quantum field theories. We can view this correspondence as providing a complete non-perturbative definition of the quantum gravity theory via a quantum field theory. However, despite a great deal of evidence for the validity of this correspondence, we do not have a deep understanding of why or how spacetime/gravity emerges from the degrees of freedom of the field theory.
 
 In this essay, we will argue, based on widely accepted examples of gauge theory / gravity duality, that the emergence of spacetime in the gravity picture is intimately related to the quantum entanglement of degrees of freedom in the corresponding conventional quantum system. We will begin by showing that certain quantum superpositions of states corresponding to disconnected spacetimes give rise to states that are interpreted as classically connected spacetimes.  More quantitatively, we will see in a simple example that decreasing the entanglement between two sets of degrees of freedom (e.g. by continuously varying the quantum state in the field theory description) effectively increases the proper distance between the corresponding spacetime regions, while decreasing the area separating the two regions.
-\vskip 0.1 in
-\noindent
-{\bf Classical connectivity from quantum superposition}
-\vskip 0.1 in
-\noindent
+
+\section{Classical connectivity from quantum superposition}
+
 The most familiar example of gauge-theory / gravity duality involves an equivalence between conformal field theories (CFTs) and asymptotically anti-de Sitter (AdS) spacetimes. For specific CFTs, each state of the field theory on a sphere ($\times$ time) corresponds to a spacetime in some specific theory of quantum gravity where the asymptotics of the spacetime are the same as global AdS spacetime.
 
 Let us now consider a slightly more complicated example, where we build a larger quantum system by taking two (non-interacting) copies of our conformal field theory on $S^d$. As usual, the Hilbert space for this system will be the tensor product ${\cal H} = {\cal H}_1 \otimes {\cal H}_2$ of the Hilbert spaces for the component systems.
@@ -182,11 +195,9 @@ The motivation for this statement is as follows. This is a spacetime with two eq
 Furthermore, the presence of horizons in the black hole spacetime which forbid communication between the two asymptotic regions may be naturally associated with the absence of interactions between the two CFTs. Thus, the state $|\psi (\beta) \rangle$ has properties which are completely consistent with its interpretation as the eternal AdS black hole.
 
 If this identification is correct, we have a remarkable conclusion: the state $|\psi (\beta) \rangle$ which clearly represents a quantum superposition of disconnected spacetimes may also be identified with a classically connected spacetime. In this example, {\it classical connectivity arises by entangling the degrees of freedom in the two components}. In the next section, we will try to test the idea that emergent spacetimes in gauge-theory / gravity duality are built up by entangling degrees of freedom in the non-perturbative description.
-\vskip 0.1 in
-\noindent
-{\bf A disentangling experiment}
-\vskip 0.1 in
-\noindent
+
+\section{A disentangling experiment}
+
 Let us return to the simpler case of a single CFT on $S^d$. We would like to do a thought experiment in which we start with the vacuum state of the field theory, dual to gravity on pure global AdS spacetime, and see what happens to the dual geometry when we gradually change the state to disentangle some of the degrees of freedom. To be specific, we divide the sphere into two parts (e.g. hemispheres) which we label $A$ and $B$.
 
 Since the CFT is a local quantum field theory, there are specific degrees of freedom associated with specific spatial regions, so we can decompose the Hilbert space ${\cal H} = {\cal H}_A \otimes {\cal H}_B$. A simple quantitative measure of the entanglement between $A$ and $B$ is the entanglement entropy \cite{nc}, defined to be the von Neumann entropy
@@ -240,14 +251,12 @@ Together with the result of the previous subsection, we obtain the following pic
 \caption{Spatial section of eternal black hole for two different temperatures (corresponding to a horizontal line through the middle of the Penrose diagram of figure 1). For low temperature (large $\beta$), where entanglement between the two CFTs is smaller, the asymptotic regions are further apart and separated by a surface of smaller area.}
 \end{figure}
 As seen in figure 5, these quantitative features can be seen explicitly in the example of the eternal AdS black hole, where we can decrease the entanglement between the two CFTs by increasing the inverse temperature parameter $\beta$.
-\vskip 0.1 in
-\noindent
-{\bf Conclusions}
-\vskip 0.1 in
-\noindent
+
+\section{Conclusions}
+
 We have seen that we can connect up spacetimes by entangling degrees of freedom and tear them apart by disentangling. It is fascinating that the intrinsically quantum phenomenon of entanglement appears to be crucial for the emergence of classical spacetime geometry.
 
-\section*{Acknowledgements}
+\section{Acknowledgements}
 This work has been supported in part by the Natural Sciences and Engineering Research Council of Canada, the Alfred P. Sloan Foundation, and the Canada Research Chairs programme.
 
 \begin{thebibliography}{999}
