--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,46 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-04 09:08:33 -0400 
+%% Created for Pete Su at 2023-08-04 09:35:49 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Van-Raamsdonk2010a,
+	author = {Mark {Van Raamsdonk}},
+	date-added = {2023-08-04 09:35:25 -0400},
+	date-modified = {2023-08-04 09:35:49 -0400},
+	doi = {10.1007/s10714-010-1034-0},
+	journal = {Gen Relativ Gravit},
+	note = {\href{http://arxiv.org/abs/1005.3035v1}{arxiv:1005.3035v1}},
+	number = {10},
+	pages = {2323--2329},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Building up spacetime with quantum entanglement},
+	url = {https://doi.org/10.1007%2Fs10714-010-1034-0},
+	volume = {42},
+	year = 2010,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fs10714-010-1034-0},
+	bdsk-url-2 = {https://doi.org/10.1007/s10714-010-1034-0}}
+
+@article{Van-Raamsdonk2010,
+	author = {Mark {Van Raamsdonk}},
+	date-added = {2023-08-04 09:33:59 -0400},
+	date-modified = {2023-08-04 09:35:22 -0400},
+	doi = {10.1142/s0218271810018529},
+	journal = {Int. J. Mod. Phys. D},
+	note = {\href{http://arxiv.org/abs/1005.3035v1}{arxiv:1005.3035v1}},
+	number = {14},
+	pages = {2429--2435},
+	publisher = {World Scientific Pub Co Pte Lt},
+	title = {Building up spacetime with quantum entanglement},
+	url = {https://doi.org/10.1142%2Fs0218271810018529},
+	volume = {19},
+	year = 2010,
+	bdsk-url-1 = {https://doi.org/10.1142%2Fs0218271810018529},
+	bdsk-url-2 = {https://doi.org/10.1142/s0218271810018529}}
 
 @article{Casini2022,
 	author = {Casini, Horacio and Huerta, Marina},
