--- a/1606.08444/emergentspace.tex
+++ b/1606.08444/emergentspace.tex
@@ -6,7 +6,7 @@ showpacs,
  aps,
  prd,
  superscriptaddress, 12pt
-]{revtex4-1}
+]{revtex4-2}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[colorlinks=true
@@ -25,12 +25,11 @@ bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=1.25in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=1.25in]{geometry}
+\sloppy
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
 %\usepackage[dotinlabels]{titletoc}
@@ -127,8 +126,10 @@ A version of the ER=EPR conjecture is recovered, in that perturbations that enta
                              % Classification Scheme.
 %\keywords{Suggested keywords}%Use showkeys class option if keyword
                               %display desired
+                              
 \maketitle
 
+\newpage
 \tableofcontents
 \newpage
 
