--- a/1606.08444/emergentspace.tex
+++ b/1606.08444/emergentspace.tex
@@ -1,11 +1,11 @@
 
 \documentclass[
-preprint,
+12pt,preprint,
 showpacs,
  amsmath,amssymb,
  aps,
  prd,
- superscriptaddress, 12pt
+ superscriptaddress
 ]{revtex4-2}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
@@ -24,7 +24,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.05}
+\linespread{1.1}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=1.25in]{geometry}
 \sloppy
 
@@ -40,6 +40,7 @@ bookmarksopenlevel=10
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \sloppy
+\raggedbottom
 
 \usepackage{graphicx}% Include figure files
 \usepackage{dcolumn}% Align table columns on decimal point
@@ -106,15 +107,16 @@ bookmarksopenlevel=10
 \author{Spyridon \surname{Michalakis}}
 \email{spiros@caltech.edu}
 \affiliation{Walter Burke Institute for Theoretical Physics California Institute of Technology, Pasadena, CA 91125, USA}
-\affiliation{Institute for Quantum Information and Matter, California Institute of Technology, Pasadena, CA 91125, USA}
+\affiliation{Institute for Quantum Information and Matter, California Institute of Technology, Pasadena, CA 91125, USA
+\bigskip}
 
 
 
 % \affiliation{Institute for Quantum Information and Matter, California Institute of Technology, Pasadena, CA 91125, USA}\\
 
-\bigskip
 
 \begin{abstract}
+\bigskip
 We examine how to construct a spatial manifold and its geometry from the entanglement structure of an abstract quantum state in Hilbert space. 
 Given a decomposition of Hilbert space $\mathcal{H}$ into a tensor product of factors,  we consider a class of ``redundancy-constrained states" in $\mathcal{H}$ that generalize the area-law behavior for entanglement entropy usually found in condensed-matter systems with gapped local Hamiltonians. Using mutual information to define a distance measure on the graph, we employ classical multidimensional scaling to extract the best-fit spatial dimensionality of the emergent geometry. 
 We then show that entanglement perturbations on such emergent geometries naturally give rise to local modifications of spatial curvature which obey a (spatial) analog of Einstein's equation. 
