--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,86 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-04 09:43:54 -0400 
+%% Created for Pete Su at 2023-08-05 20:09:56 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Coleman1988,
+	author = {Coleman, Sidney},
+	date-added = {2023-08-05 20:09:40 -0400},
+	date-modified = {2023-08-05 20:09:42 -0400},
+	journal = {Nuclear Physics B},
+	number = {4},
+	pages = {867--882},
+	publisher = {Elsevier},
+	title = {Black holes as red herrings: topological fluctuations and the loss of quantum coherence},
+	volume = {307},
+	year = {1988}}
+
+@article{Davies1976,
+	abstract = {The physical basis underlying the black hole evaporation process is clarified by a calculation of the expectation value of the energy-momentum tensor for a massless scalar field in a completely general two dimensional collapse scenario. It is found that radiation is produced inside the collapsing matter which propagates both inwards and outwards. The ingoing component eventually emerges from the star after travelling through the centre. The outgoing energy flux appears at infinity as the evaporation radiation discovered by Hawking. At late times, outside the star, the former component fades out exponentially, and the latter component approaches a value which is independent of the details of the collapse process. In the special case of a collapsing hollow, thin shell of matter, all the radiation is produced at the shell. These results are independent of regularization ambiguities, which enter only the static vacuum polarization terms in the energy-momentum tensor. The significance of an earlier remark about black hole explosions is discussed in the light of these results.},
+	author = {P. C. W. Davies},
+	date-added = {2023-08-05 20:09:03 -0400},
+	date-modified = {2023-08-05 20:09:05 -0400},
+	issn = {00804630},
+	journal = {Proceedings of the Royal Society of London. Series A, Mathematical and Physical Sciences},
+	number = {1664},
+	pages = {129--139},
+	publisher = {The Royal Society},
+	title = {On the Origin of Black Hole Evaporation Radiation},
+	url = {http://www.jstor.org/stable/79313},
+	urldate = {2023-08-05},
+	volume = {351},
+	year = {1976},
+	bdsk-url-1 = {http://www.jstor.org/stable/79313}}
+
+@conference{Davies1984,
+	author = {Davies, Paul CW},
+	booktitle = {Quantum theory of gravity},
+	date-added = {2023-08-05 20:05:12 -0400},
+	date-modified = {2023-08-05 20:08:15 -0400},
+	editor = {Christensen, Steven M},
+	pages = {66},
+	title = {Particles do not exist},
+	year = {1984}}
+
+@book{Christensen1984,
+	date-added = {2023-08-05 19:59:51 -0400},
+	date-modified = {2023-08-05 20:00:24 -0400},
+	editor = {Christensen, Steven M},
+	publisher = {Adam Hilger Ltd, Bristol},
+	title = {Quantum theory of gravity},
+	year = {1984}}
+
+@article{Charles2020,
+	author = {Anthony M. Charles and Finn Larsen},
+	date-added = {2023-08-05 19:58:57 -0400},
+	date-modified = {2023-08-05 19:58:59 -0400},
+	doi = {10.1007/jhep07(2020)186},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1908.03575v1}{arxiv:1908.03575v1}},
+	number = {7},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {A one-loop test of the near-{AdS}2/near-{CFT}1 correspondence},
+	url = {https://doi.org/10.1007%2Fjhep07%282020%29186},
+	volume = {2020},
+	year = 2020,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep07%282020%29186},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep07(2020)186}}
+
+@phdthesis{Robson2015,
+	author = {Robson, Charles},
+	date-added = {2023-08-05 19:56:38 -0400},
+	date-modified = {2023-08-05 19:58:01 -0400},
+	doi = {10.13140/RG.2.2.22562.07363},
+	school = {Imperial College},
+	title = {The Black Hole Information Paradox},
+	url = {{http://rgdoi.net/10.13140/RG.2.2.22562.07363}},
+	year = {2015},
+	bdsk-url-1 = {https://doi.org/10.13140/RG.2.2.22562.07363}}
 
 @article{Cao2017,
 	author = {ChunJun Cao and Sean M. Carroll and Spyridon Michalakis},
