--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-05 20:12:51 -0400 
+%% Created for Pete Su at 2023-08-06 07:04:18 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Cuspinera2019,
+	author = {Leopoldo Cuspinera and Ruth Gregory and Katie M. Marshall and Ian G. Moss},
+	date-added = {2023-08-06 07:03:36 -0400},
+	date-modified = {2023-08-06 07:03:39 -0400},
+	doi = {10.1103/physrevd.99.024046},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1803.02871v2}{arxiv:1803.02871v2}},
+	number = {2},
+	publisher = {American Physical Society ({APS})},
+	title = {Higgs vacuum decay from particle collisions?},
+	url = {https://doi.org/10.1103%2Fphysrevd.99.024046},
+	volume = {99},
+	year = 2019,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.99.024046},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.99.024046}}
 
 @article{Compere2019,
 	author = {Geoffrey Comp{\`{e}}re},
@@ -7657,25 +7673,6 @@ horizon.},
 	volume = {08},
 	year = {2012},
 	bdsk-url-1 = {https://doi.org/10.1007/JHEP08(2012)098}}
-
-@article{Cuspinera:2018woe,
-	archiveprefix = {arXiv},
-	author = {Cuspinera, Leopoldo and Gregory, Ruth and Marshall, Katie and Moss, Ian G.},
-	date-added = {2019-02-17 02:18:12 +0000},
-	date-modified = {2019-02-17 02:18:37 +0000},
-	doi = {10.1103/PhysRevD.99.024046},
-	eprint = {1803.02871},
-	journal = {Phys. Rev.},
-	note = {\href{https://arxiv.org/abs/1803.02871}{arxiv:1803.02871}},
-	number = {2},
-	pages = {024046},
-	primaryclass = {hep-th},
-	reportnumber = {DCPT-18/05, DCPT-18-05},
-	slaccitation = {%%CITATION = ARXIV:1803.02871;%%},
-	title = {{Higgs Vacuum Decay from Particle Collisions?}},
-	volume = {D99},
-	year = {2019},
-	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.99.024046}}
 
 @article{Gregory:2013hja,
 	archiveprefix = {arXiv},
