--- a/1803.02871/branebhfinal.tex
+++ b/1803.02871/branebhfinal.tex
@@ -5,11 +5,7 @@
 	notitlepage,
 	longbibliography,
 	nofootinbib]{revtex4-1}
-\usepackage[colorlinks=true, 
-	linkcolor=blue, 
-	citecolor=blue, 
-	urlcolor=blue, 
-	linktocpage=true]{hyperref}
+
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{lmodern}
@@ -17,6 +13,47 @@
 \usepackage{wrapfig}
 
 \usepackage{mathtools}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \usepackage[
 % uncomment to hide bubbles
@@ -77,7 +114,7 @@ backgroundcolor=gray!20!white}
 \begin{document}
 
 \title{Higgs Vacuum Decay from Particle Collisions?}
-\date{\today} 
+\date{11 Dec 2018} 
 
 
 \author{Leopoldo Cuspinera}
@@ -123,6 +160,7 @@ collider black holes, but they can be relevant for cosmic ray collisions.
 
 \maketitle
 
+\newpage
 \section{Introduction}
 
 A fascinating consequence of the discovery of the Higgs 
