--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,57 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-06 07:17:37 -0400 
+%% Created for Pete Su at 2023-08-06 07:41:37 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{Dowker2015,
+	author = {Fay Dowker},
+	date-added = {2023-08-06 07:40:29 -0400},
+	date-modified = {2023-08-06 07:41:29 -0400},
+	howpublished = {Online Notes},
+	note = {\href{http://www.sns.ias.edu/~bkocsis/Assets/Teaching/BH2015/dowker.pdf}{PDF}},
+	title = {Black Holes - MSc in Quantum Fields and Fundamental Forces},
+	year = {2015}}
+
+@article{Almheiri2015,
+	author = {Ahmed Almheiri and Xi Dong and Daniel Harlow},
+	date-added = {2023-08-06 07:35:51 -0400},
+	date-modified = {2023-08-06 07:35:53 -0400},
+	doi = {10.1007/jhep04(2015)163},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1411.7041v3}{arxiv:1411.7041v3}},
+	number = {4},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Bulk locality and quantum error correction in {AdS}/{CFT}},
+	url = {https://doi.org/10.1007%2Fjhep04%282015%29163},
+	volume = {2015},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep04%282015%29163},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep04(2015)163}}
+
+@article{t-Hooft1993,
+	author = {'t Hooft, Gerard},
+	date-added = {2023-08-06 07:34:40 -0400},
+	date-modified = {2023-08-06 07:35:25 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/gr-qc/9310026v2}{arxiv:9310026v2}},
+	title = {Dimensional reduction in quantum gravity},
+	year = {1993}}
+
+@incollection{Durr2009,
+	author = {D{\"u}rr, Detlev and Goldstein, Sheldon and Tumulka, Roderich and Zangh{\'\i}, Nino},
+	booktitle = {Compendium of quantum physics},
+	date-added = {2023-08-06 07:31:51 -0400},
+	date-modified = {2023-08-06 07:32:21 -0400},
+	note = {\href{https://arxiv.org/abs/0903.2601}{arxiv:0903.2601}},
+	pages = {47--55},
+	publisher = {Springer},
+	title = {Bohmian mechanics},
+	year = {2009}}
 
 @article{Davies1976b,
 	author = {Davies, Paul CW and Fulling, Stephen A and Unruh, William G},
@@ -5161,24 +5206,6 @@
 	year = {2000},
 	bdsk-url-1 = {https://doi.org/10.1016/S0370-1573(99)00083-6}}
 
-@article{Dong:2014lwa,
-	archiveprefix = {arXiv},
-	author = {Almheiri, Ahmed and Dong, Xi and Harlow, Daniel},
-	date-added = {2019-11-22 07:23:41 -0500},
-	date-modified = {2019-11-22 07:24:10 -0500},
-	doi = {10.1007/JHEP04(2015)163},
-	eprint = {1411.7041},
-	journal = {JHEP},
-	note = {\href{https://arxiv.org/abs/1411.7041}{arxiv:1411.7041}},
-	pages = {163},
-	primaryclass = {hep-th},
-	reportnumber = {SU-ITP-14-30},
-	slaccitation = {%%CITATION = ARXIV:1411.7041;%%},
-	title = {{Bulk Locality and Quantum Error Correction in AdS/CFT}},
-	volume = {04},
-	year = {2015},
-	bdsk-url-1 = {https://doi.org/10.1007/JHEP04(2015)163}}
-
 @article{Page:2013dx,
 	archiveprefix = {arXiv},
 	author = {Page, Don N.},
@@ -5267,11 +5294,11 @@
 	year = {2006},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevLett.96.181602}}
 
-@article{Dong:2016eik,
+@article{Dong2016,
 	archiveprefix = {arXiv},
 	author = {Dong, Xi and Harlow, Daniel and Wall, Aron C.},
 	date-added = {2019-11-20 08:34:24 -0500},
-	date-modified = {2019-11-20 08:34:47 -0500},
+	date-modified = {2023-08-06 07:37:33 -0400},
 	doi = {10.1103/PhysRevLett.117.021601},
 	eprint = {1601.05416},
 	journal = {Phys. Rev. Lett.},
