--- a/1601.05416/entanglementprl.tex
+++ b/1601.05416/entanglementprl.tex
@@ -22,15 +22,17 @@ colorlinks=true
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-%\usepackage[noBBpl]{mathpazo}
+\usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=8000
-\hbadness=8000
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-% different \sum and also fixes underbraces
-\input{../helpers/mnsymbol.tex}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 
 % optional
 
