--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-06 07:59:41 -0400 
+%% Created for Pete Su at 2023-08-06 08:05:07 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Eisert_2010,
+	author = {J. Eisert and M. Cramer and M. B. Plenio},
+	date-added = {2023-08-06 08:04:50 -0400},
+	date-modified = {2023-08-06 08:05:07 -0400},
+	doi = {10.1103/revmodphys.82.277},
+	journal = {Rev. Mod. Phys.},
+	note = {\href{http://arxiv.org/abs/0808.3773v4}{arxiv:0808.3773v4}},
+	number = {1},
+	pages = {277--306},
+	publisher = {American Physical Society ({APS})},
+	title = {Area laws for the entanglement entropy},
+	url = {https://doi.org/10.1103%2Frevmodphys.82.277},
+	volume = {82},
+	year = 2010,
+	bdsk-url-1 = {https://doi.org/10.1103%2Frevmodphys.82.277},
+	bdsk-url-2 = {https://doi.org/10.1103/revmodphys.82.277}}
 
 @article{Einstein1939,
 	author = {Albert Einstein},
