--- a/hep-th-0603081/bhentangv3.tex
+++ b/hep-th-0603081/bhentangv3.tex
@@ -25,7 +25,49 @@
 \newcommand{\labels}[1]{\label{#1}} %{\vskip-2ex$_{#1}%$\label{#1}}
 \newcommand{\reef}[1]{(\ref{#1})}
 
-\renewcommand{\baselinestretch}{1.25}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \begin{document}
 
@@ -78,7 +120,7 @@ associated with this identification.
 
 \newpage
 
-\noindent\textbf{1. Introduction.} The vacuum of a quantum field in
+\section{Introduction.} The vacuum of a quantum field in
 equilibrium with a black hole contains correlations between points
 inside and outside the horizon that are responsible for the thermal
 behavior detected by outside observers \cite{unruh,israel}. It is then
@@ -154,9 +196,7 @@ concluding section, being a bulk-based calculation, it does not directly
 clarify the microscopic origin of the entropy.
 
 
-\bigskip
-
-\noindent\textbf{2. Holographic calculation of entanglement entropy.} In
+\section{Holographic calculation of entanglement entropy.} In
 ref.~\cite{ryta} Ryu and Takayanagi propose, and give evidence for, the
 following way to compute the entropy of entanglement for a (conformal)
 quantum field theory that admits a gravitational dual. Say that the
@@ -192,9 +232,8 @@ should exist. Our aim is to describe a concrete set up where the
 identification of black hole entropy with entanglement entropy, computed
 via AdS/CFT, becomes manifest.
 
-\bigskip
 
-\noindent\textbf{3. Set up.} Ref.~\cite{ryta} applied the proposal
+\section{et up.} Ref.~\cite{ryta} applied the proposal
 \reef{holoent} to cases where the bulk spacetime is essentially empty or
 contains a black hole at its center (not at the boundary), which
 corresponds to a thermal state of the quantum conformal field theory. We
@@ -342,9 +381,8 @@ S_{BH}=S_{\circ}\left(1-\frac{4\pi}{3}\frac{R}{\mathcal{C}_{h}}
 \eeq
 
 
-\bigskip
 
-\noindent\textbf{4. Black hole entropy equals entanglement entropy.}
+\section{Black hole entropy equals entanglement entropy.}
 Following the prescription \reef{holoent}, in order to compute the
 entanglement entropy of the CFT in the region $A$ outside the black hole
 horizon, we must find a minimal surface $\gamma_A$ in a spatial slice of
@@ -434,7 +472,7 @@ entropy away from the Bekenstein-Hawking entropy on the brane $S_{\circ}$.
 
 \bigskip
 
-\noindent\textbf{5. Comparison to entanglement on a circle in flat
+\section{Comparison to entanglement on a circle in flat
 space.} It is instructive to compare the entanglement across the black
 hole horizon to the entanglement on a circle (since we are in two
 spatial dimensions) of the same length in flat space. This is analogous
@@ -510,7 +548,7 @@ size of the black hole.
 
 \bigskip
 
-\noindent\textbf{6. Generalization to higher dimensions.} No exact
+\section{Generalization to higher dimensions.} No exact
 solution for a static black hole with regular horizon on a RS2 brane in
 AdS$_{D>4}$ is known. Refs.~\cite{tanaka,efk} argue that indeed no such
 solution should exist, since the backreaction of the quantum fields
@@ -555,9 +593,7 @@ holographic argument applies again to prove that black hole entropy is
 exactly equal to entanglement entropy.
 
 
-\bigskip
-
-\noindent\textbf{7. Connection to another notion of
+\section{Connection to another notion of
 entanglement within AdS/CFT}. Our approach to relate
 black hole entropy to entanglement entropy using AdS/CFT holography
 looks conceptually very different from another approach discussed
@@ -618,10 +654,8 @@ difference being in whether the boundary where the CFT is defined
 contains the black hole horizon or not.
 
 
-\bigskip
 
-
-\noindent\textbf{8. Discussion.} The extreme simplicity of the argument
+\section{8. Discussion.} The extreme simplicity of the argument
 for the main result in this paper, eq.~\reef{main}, may prompt the
 criticism that the reasoning might actually be circular, assuming already what
 it purports to prove ---an entropy equal to an area divided by $4G$.
@@ -669,11 +703,10 @@ At the very least, we think we have provided new grounds in support of
 this interpretation. 
 
 
-\bigskip
 
 %\section*{Acknowledgements}
 
-\noindent\textbf{Acknowledgements.} I would like to thank Jaume Garriga
+\section{Acknowledgements.} I would like to thank Jaume Garriga
 and Tony Padilla for a helpful discussion. I also thank Ted Jacobson for
 pointing me to ref.~\cite{hms}. This work is partially supported by
 grants CICyT FPA2004-04582-C02-02, European Comission FP6 program
