--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-06 08:13:35 -0400 
+%% Created for Pete Su at 2023-08-06 08:14:02 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -6628,11 +6628,11 @@
 	year = {1972},
 	bdsk-url-1 = {https://doi.org/10.1063/1.1665879}}
 
-@article{Ellis:2014rma,
+@article{Ellis2014,
 	archiveprefix = {arXiv},
 	author = {Ellis, John},
 	date-added = {2019-06-10 22:51:45 -0400},
-	date-modified = {2019-06-10 22:52:52 -0400},
+	date-modified = {2023-08-06 08:14:00 -0400},
 	doi = {10.1142/9789814618113_0012, 10.1142/S0217751X14300725},
 	eprint = {1409.4232},
 	journal = {Int. J. Mod. Phys.},
@@ -6903,12 +6903,12 @@
 	bdsk-url-1 = {https://www.worldscientific.com/doi/abs/10.1142/9878},
 	bdsk-url-2 = {https://doi.org/10.1142/9878}}
 
-@incollection{Ellis:2015tba,
+@incollection{Ellis2016,
 	archiveprefix = {arXiv},
 	author = {Ellis, John and Gaillard, Mary K. and Nanopoulos, Dimitri V.},
 	booktitle = {The standard theory of particle physics: Essays to celebrate CERN's 60th anniversary},
 	date-added = {2019-03-12 08:06:22 -0400},
-	date-modified = {2023-07-26 07:34:06 -0400},
+	date-modified = {2023-08-06 08:13:57 -0400},
 	doi = {10.1142/9789814733519_0014},
 	editor = {Maiani, Luciano and Rolandi, Luigi},
 	eprint = {1504.07217},
@@ -7627,10 +7627,10 @@ horizon.},
 	year = {2014},
 	bdsk-url-1 = {https://books.google.com/books?id=nIk6AwAAQBAJ}}
 
-@book{ellis2003qcd,
+@book{Ellis2003,
 	author = {Ellis, R.K. and Stirling, W.J. and Webber, B.R.},
 	date-added = {2019-02-24 14:04:18 +0000},
-	date-modified = {2019-02-24 14:04:18 +0000},
+	date-modified = {2023-08-06 08:13:52 -0400},
 	isbn = {9780521545891},
 	lccn = {96031560},
 	publisher = {Cambridge University Press},
