--- a/hep-th-0603081/bhentangv3.tex
+++ b/hep-th-0603081/bhentangv3.tex
@@ -233,7 +233,7 @@ identification of black hole entropy with entanglement entropy, computed
 via AdS/CFT, becomes manifest.
 
 
-\section{et up.} Ref.~\cite{ryta} applied the proposal
+\section{Set up.} Ref.~\cite{ryta} applied the proposal
 \reef{holoent} to cases where the bulk spacetime is essentially empty or
 contains a black hole at its center (not at the boundary), which
 corresponds to a thermal state of the quantum conformal field theory. We
