--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,147 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-06 08:14:02 -0400 
+%% Created for Pete Su at 2023-08-06 09:03:36 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Frolov1998,
+	author = {Valeri P. Frolov and Igor D. Novikov},
+	date-added = {2023-08-06 09:03:31 -0400},
+	date-modified = {2023-08-06 09:03:33 -0400},
+	doi = {10.1007/978-94-011-5139-9},
+	publisher = {Springer Netherlands},
+	title = {Black Hole Physics},
+	url = {https://doi.org/10.1007%2F978-94-011-5139-9},
+	year = 1998,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-94-011-5139-9},
+	bdsk-url-2 = {https://doi.org/10.1007/978-94-011-5139-9}}
+
+@article{Ford2006,
+	author = {G.W. Ford and R.F. O{\textquotesingle}Connell},
+	date-added = {2023-08-06 09:02:29 -0400},
+	date-modified = {2023-08-06 09:02:32 -0400},
+	doi = {10.1016/j.physleta.2005.09.068},
+	journal = {Physics Letters A},
+	number = {1-2},
+	pages = {17--26},
+	publisher = {Elsevier {BV}},
+	title = {Is there Unruh radiation?},
+	url = {https://doi.org/10.1016%2Fj.physleta.2005.09.068},
+	volume = {350},
+	year = 2006,
+	bdsk-url-1 = {https://doi.org/10.1016%2Fj.physleta.2005.09.068},
+	bdsk-url-2 = {https://doi.org/10.1016/j.physleta.2005.09.068}}
+
+@misc{Fewster2008,
+	author = {Fewster, Christopher J},
+	date-added = {2023-08-06 09:00:10 -0400},
+	date-modified = {2023-08-06 09:01:13 -0400},
+	howpublished = {Online Notes},
+	note = {\href{https://www.mis.mpg.de/publications/other-series/ln/lecturenote-3908.html}{Download}},
+	publisher = {Max-Planck-Institut fuer Mathematik in der Naturwissenschaften},
+	title = {Lectures on quantum field theory in curved spacetime},
+	year = {2008}}
+
+@article{Fiola1994,
+	author = {Thomas M. Fiola and John Preskill and Andrew Strominger and Sandip P. Trivedi},
+	date-added = {2023-08-06 08:56:23 -0400},
+	date-modified = {2023-08-06 08:56:55 -0400},
+	doi = {10.1103/physrevd.50.3987},
+	journal = {Phys. Rev. D},
+	note = {\href{https://arxiv.org/abs/hep-th/9403137}{arxiv:hep-th/9403137}},
+	number = {6},
+	pages = {3987--4014},
+	publisher = {American Physical Society ({APS})},
+	title = {Black hole thermodynamics and information loss in two dimensions},
+	url = {https://doi.org/10.1103%2Fphysrevd.50.3987},
+	volume = {50},
+	year = 1994,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.50.3987},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.50.3987}}
+
+@article{Fredenhagen2016,
+	author = {Klaus Fredenhagen and Kasia Rejzner},
+	date-added = {2023-08-06 08:53:24 -0400},
+	date-modified = {2023-08-06 08:53:28 -0400},
+	doi = {10.1063/1.4939955},
+	journal = {Journal of Mathematical Physics},
+	note = {\href{http://arxiv.org/abs/1412.5125v4}{arxiv:1412.5125v4}},
+	number = {3},
+	publisher = {{AIP} Publishing},
+	title = {Quantum field theory on curved spacetimes: Axiomatic framework and examples},
+	url = {https://doi.org/10.1063%2F1.4939955},
+	volume = {57},
+	year = 2016,
+	bdsk-url-1 = {https://doi.org/10.1063%2F1.4939955},
+	bdsk-url-2 = {https://doi.org/10.1063/1.4939955}}
+
+@article{Feng2014,
+	author = {Yu-Lei Feng and Yi-Xin Chen},
+	date-added = {2023-08-06 08:52:34 -0400},
+	date-modified = {2023-08-06 08:52:35 -0400},
+	doi = {10.1007/jhep12(2014)088},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1406.6792v2}{arxiv:1406.6792v2}},
+	number = {12},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {A unitary model of the black hole evaporation},
+	url = {https://doi.org/10.1007%2Fjhep12%282014%29088},
+	volume = {2014},
+	year = 2014,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep12%282014%29088},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep12(2014)088}}
+
+@article{Faulkner2013,
+	author = {Thomas Faulkner and Aitor Lewkowycz and Juan Maldacena},
+	date-added = {2023-08-06 08:52:06 -0400},
+	date-modified = {2023-08-06 08:52:10 -0400},
+	doi = {10.1007/jhep11(2013)074},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1307.2892v2}{arxiv:1307.2892v2}},
+	number = {11},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Quantum corrections to holographic entanglement entropy},
+	url = {https://doi.org/10.1007%2Fjhep11%282013%29074},
+	volume = {2013},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep11%282013%29074},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep11(2013)074}}
+
+@article{Engelhardt2021,
+	author = {Netta Engelhardt and Sebastian Fischetti and Alexander Maloney},
+	date-added = {2023-08-06 08:51:44 -0400},
+	date-modified = {2023-08-06 08:51:47 -0400},
+	doi = {10.1103/physrevd.103.046021},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/2007.07444v3}{arxiv:2007.07444v3}},
+	number = {4},
+	publisher = {American Physical Society ({APS})},
+	title = {Free energy from replica wormholes},
+	url = {https://doi.org/10.1103%2Fphysrevd.103.046021},
+	volume = {103},
+	year = 2021,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.103.046021},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.103.046021}}
+
+@article{Engelhardt2015,
+	author = {Netta Engelhardt and Aron C. Wall},
+	date-added = {2023-08-06 08:51:23 -0400},
+	date-modified = {2023-08-06 08:51:25 -0400},
+	doi = {10.1007/jhep01(2015)073},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1408.3203v3}{arxiv:1408.3203v3}},
+	number = {1},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Quantum extremal surfaces: holographic entanglement entropy beyond the classical regime},
+	url = {https://doi.org/10.1007%2Fjhep01%282015%29073},
+	volume = {2015},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep01%282015%29073},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep01(2015)073}}
 
 @article{Emparan2006,
 	author = {Roberto Emparan},
@@ -5958,11 +6093,11 @@
 	title = {{Niels Bohr and the Philosophy of Physics Twenty-First-Century Perspectives}},
 	year = {2017}}
 
-@article{Fredenhagen:2006,
+@article{Fredenhagen2007,
 	archiveprefix = {arXiv},
 	author = {Fredenhagen, Klaus and Rehren, Karl-Henning and Seiler, Erhard},
 	date-added = {2019-08-13 20:14:54 -0400},
-	date-modified = {2019-08-13 20:15:26 -0400},
+	date-modified = {2023-08-06 08:53:35 -0400},
 	doi = {10.1007/978-3-540-71117-9_4},
 	eprint = {hep-th/0603155},
 	journal = {Lect. Notes Phys.},
@@ -6245,10 +6380,10 @@
 	bdsk-url-1 = {https://www.worldscientific.com/doi/abs/10.1142/7038},
 	bdsk-url-2 = {https://doi.org/10.1142/7038}}
 
-@article{Fewster:2019ixc,
+@article{Fewster2019,
 	author = {Fewster, Christopher J. and Rejzner, Kasia},
 	date-added = {2019-07-12 07:50:19 -0400},
-	date-modified = {2023-07-26 10:02:42 -0400},
+	date-modified = {2023-08-06 09:01:35 -0400},
 	eprint = {1904.04051},
 	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/1904.04051}{https://arxiv:1904.04051}},
